--- a/src/views/MainHomeView.mxml
+++ b/src/views/MainHomeView.mxml
@@ -4,6 +4,9 @@
 	<fx:Script>
 		<![CDATA[
 			import flash.filters.ColorMatrixFilter;
+			import flash.filters.ConvolutionFilter;
+			
+			import mx.events.FlexEvent;
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -14,64 +17,91 @@
 		<s:VerticalLayout/>
 	</s:layout>
 	
-	<s:Button label="Open camera roll">
-		<s:click>
-			<![CDATA[
-				if (CameraRoll.supportsBrowseForImage)
-			    {
-					var cameraRoll:CameraRoll = new CameraRoll();
-					cameraRoll.addEventListener(MediaEvent.SELECT, function(event:MediaEvent):void {
-						image.filters = null;
-						image.source = event.data.file.url;
-					});	
-					cameraRoll.browseForImage();
-				}
-				else
-				{
-					info.text = "CameraRoll not supported";
-				}
-			]]>
-		</s:click>
-	</s:Button>
-	
-	<s:Button label="Snap photo">
-		<s:click>
-			<![CDATA[
-				if (CameraUI.isSupported)
-				{
-					var cameraUI:CameraUI = new CameraUI();
-					cameraUI.addEventListener(MediaEvent.COMPLETE, function(event:MediaEvent):void {
-						image.filters = null;
-						image.source = event.data.file.url;
-					});
-					cameraUI.addEventListener(ErrorEvent.ERROR, function(error:ErrorEvent):void {
-						trace("Error: " + error.text);
-						info.text = "Error: " + error.text;
-					});
-					cameraUI.launch(MediaType.IMAGE);
-				}
-				else
-				{
-					info.text = "CameraUI not supported";
-				}
-			]]>
-		</s:click>
-	</s:Button>
-	
-	<s:Button label="Apply filter">
-		<s:click>
-			<![CDATA[
-			    var matrix:Array = [0,1,0,0,0,
-			                        0,0,1,0,0,
-			                        1,0,0,0,0,
-			                        0,0,0,0,1]
-				var filter:ColorMatrixFilter = new ColorMatrixFilter(matrix);
-				image.filters = [filter];
-			]]>
-		</s:click>
-	</s:Button>
+	<s:Group width="100%">
+		<s:layout>
+			<s:TileLayout/>
+		</s:layout>
+		
+		<s:Button label="Open camera roll">
+			<s:click>
+				<![CDATA[
+					if (CameraRoll.supportsBrowseForImage)
+				    {
+						var cameraRoll:CameraRoll = new CameraRoll();
+						cameraRoll.addEventListener(MediaEvent.SELECT, function(event:MediaEvent):void {
+							image.filters = null;
+							image.source = event.data.file.url;
+						});
+				
+						cameraRoll.browseForImage();
+					}
+					else
+					{
+						info.text = "CameraRoll not supported";
+					}
+				]]>
+			</s:click>
+		</s:Button>
+		
+		<s:Button label="Snap photo">
+			<s:click>
+				<![CDATA[
+					if (CameraUI.isSupported)
+					{
+						var cameraUI:CameraUI = new CameraUI();
+						cameraUI.addEventListener(MediaEvent.COMPLETE, function(event:MediaEvent):void {
+							image.filters = null;
+							image.source = event.data.file.url;
+						});
+						cameraUI.addEventListener(ErrorEvent.ERROR, function(error:ErrorEvent):void {
+							trace("Error: " + error.text);
+							info.text = "Error: " + error.text;
+						});
+						cameraUI.launch(MediaType.IMAGE);
+					}
+					else
+					{
+						info.text = "CameraUI not supported";
+					}
+				]]>
+			</s:click>
+		</s:Button>
+		
+		<s:Button label="Apply ColorMatrixFilter">
+			<s:click>
+				<![CDATA[
+				    var matrix:Array = [0,1,0,0,0,
+				                        0,0,1,0,0,
+				                        1,0,0,0,0,
+				                        0,0,0,1,0]
+					var filter:ColorMatrixFilter = new ColorMatrixFilter(matrix);
+					image.filters = [filter];
+				]]>
+			</s:click>
+		</s:Button>
+		
+		<s:Button label="Apply ConvolutionFilter">
+			<s:click>
+				<![CDATA[
+				var matrix:Array = [0, 20, 0,
+				                    20, -80, 20,
+				                    0, 20, 0];
+				
+				var convolution:ConvolutionFilter = new ConvolutionFilter();
+				convolution.matrixX = 3;
+				convolution.matrixY = 3;
+				convolution.matrix = matrix;
+				convolution.divisor = 10;
+				
+				image.filters = [convolution];
+				]]>
+			</s:click>
+		</s:Button>
+	</s:Group>
 	
 	<s:Label id="info"/>
 	
-	<s:Image id="image" width="100%" height="100%" />
+	<s:BorderContainer borderWeight="1" borderColor="black" width="100%" height="100%">
+		<s:Image id="image" width="100%" height="100%" />
+	</s:BorderContainer>
 </s:View>
